--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
                         <div class="slideImage image-drag"></div>
                     </div>
                 </div>
+                <div id="box3" class="box blue">
+                  <h2>Check our Socials!</h2>
+                </div>
             </section>
           </div>
         </section>
@@ -228,7 +231,7 @@
     </div>
   </footer>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <!-- ScrollTo plugin -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollToPlugin.min.js"></script>
