--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
             </nav>
           </div>
         </div>
-
   </header>
   
   <section class="full-width-grid-con">
@@ -121,7 +120,7 @@
           <div class="full-width-grid-con">
             <section class="col-span-full">
               <h2 class="description_title">Look inside with our X-RAY 
-                mode</h2>
+                model</h2>
                 <section id="mobile-tablet-view">
                   <img src="images/earbuds_xray.jpg" alt="xray earbud">
                   <img src="images/earbuds.jpg" alt="Regular earbud">
@@ -137,7 +136,7 @@
                     </div>
                 </div>
                 <div id="box3" class="box blue">
-                  <h2>Check our Socials!</h2>
+                  <h3>Check Our Socials Below!</h3>
                 </div>
             </section>
           </div>
