--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                         <div class="slideImage image-drag"></div>
                     </div>
                 </div>
-                <div id="box3" class="box blue">
+                <!-- <div id="box3" class="box blue">
                   <h3>Check Our Socials Below!</h3>
-                </div>
+                </div> -->
             </section>
           </div>
         </section>
